--- a/index.html
+++ b/index.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome page</title>
+  <title>Isabell Garcia</title>
 </head>
 <body>
 
-<h1>Choose who you are</h1>
+<body style="background-color:MediumPurple;">
 
-<p>are you a person who likes to be alone and be independent</p>
-<a href="yes.html">yes, i like being alone</a>
-<p>or</p>
+<ul>
+  <li><a href="index.html">Portfolio</a></li>
+  <li><a href="glitch.html">Glitch</a></li>
+  <li><a href="meme-mashup.html">Meme mashup</a></li>
+  <li><a href="minecraft.html">Minecraft</a></li>
+</ul>
 
-<p>are you a person who like to hang around energetic people</p>
-<a href="Hell yeah.html">hell yeah</a>
-<p>or</p>
-<p>having trouble deciding choose this</p>
-<a href="i don't know.html">i don't know</a>
 
-</body>
-</html>
+<h1>Isabells' Portfolio</h1>
+
+<img src="images/car-1.png" alt="car 1" height="300">
+<img src="images/car-2.png" alt="car 2" height="300">
+<img src="images/car-3.png" alt="car 3"height="300">
+<img src="images/car-4.png" alt="car 4" height="300">
+<img src="images/minecraft-game.png" alt="minecraft game" height="300">
+<img src="images/3d-model.jpg" alt="3D model" height="300">
+<img src="images/meme.png" alt="meme" height="300">
+
+
+
+
+
+
+
+
+
+
+
+
+
