--- a/index.html
+++ b/index.html
@@ -1,30 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Isabell Garcia</title>
+<title>Welcome Page</title>
 </head>
 <body>
 
-<body style="background-color:MediumPurple;">
+<img src="choose.jpg" alt="choose" height="300">
 
-<ul>
-  <li><a href="index.html">Portfolio</a></li>
-  <li><a href="glitch.html">Glitch</a></li>
-  <li><a href="meme-mashup.html">Meme mashup</a></li>
-  <li><a href="minecraft.html">Minecraft</a></li>
-</ul>
+<h1>Choose who you are</h1>
 
+<p>are you a person who likes to be alone and independent</p>
 
-<h1>Isabells' Portfolio</h1>
+<a href="yes.html">yes, i like to be alone</a>
 
-<img src="images/car-1.png" alt="car 1" height="300">
-<img src="images/car-2.png" alt="car 2" height="300">
-<img src="images/car-3.png" alt="car 3"height="300">
-<img src="images/car-4.png" alt="car 4" height="300">
-<img src="images/minecraft-game.png" alt="minecraft game" height="300">
-<img src="images/3d-model.jpg" alt="3D model" height="300">
-<img src="images/meme.png" alt="meme" height="300">
+<p>or</p>
 
+<p>are you a person who likes to hang around energetic people</p>
+
+<a href="Hell yeah.html">hell yeah</a>
+
+<p>or</p>
+
+<p>having trouble deciding choose this</p>
+
+<a href="i-don't-know.html">i don't know</a>
+
+</body>
+</html>
 
 
 
