--- a/portfolio/3d.html
+++ b/portfolio/3d.html
@@ -14,7 +14,7 @@
   <p>Art below</p>
 </div>
 
-<body style="background-color:MediumSeaGreen;">
+<body style="background-color:powderblue;">
 
 <nav class="navbar navbar-expand-sm bg-light">
  <div class="container-fluid">
@@ -23,20 +23,16 @@
   <li class="nav-item"><a class="nav-link" href="index.html">Portfolio</a></li>
   <li class="nav-item"><a class="nav-link" href="glitch.html">Glitch</a></li>
   <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
-  <li class="navitem"><a class="nav-link" href="minecraft.html">Minecraft</a></li>
+  <li class="nav-item"><a class="nav-link" href="minecraft.html">Minecraft</a></li>
   <li class="nav-item"><a class="nav-link" href="3d.html">3D Art</a></li>
   <li class="nav-item"><a class="nav-link" href="net-art.html">Net Art</a></li>
 </ul>
 </nav>
 
 <div class="container-fluid">
-<p class="h1">Glitch Page</p>
+<p class="h1">3D Page</p>
 
-<p> These are glitched images of classic cars from the years of 1970's. I decided to do classic cars since these type of cars have some type of class to them, back when cars looked nice and unique not modern or simple. By making them have a glitch affect it makes the cars have a more vintage and classic design.</p>
-<img src="images/car-1.png" class="rounded img-thumbnail img-fluid" alt="car 1">
-<img src="images/car-2.png" class="rounded img-thumbnail img-fluid" alt="car 2">
-<img src="images/car-3.png" class="rounded img-thumbnail img-fluid" alt="car 3">
-<img src="images/car-4.png" class="rounded img-thumbnail img-fluid" alt="car 4">
-</div>
+<p style="font-size:100%;"> This is how the sculpture looks like in 3D. </p>
 
 
+<img src="images/3d-model.jpg" class="rounded img-thumbnail img-fluid" alt="3D model" height="400">
