--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Isabell Garcia</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
+</script>
 </head>
 <body>
+<div class="container p-5 my-5 bg-dark text-white">
+  <h1>Isabell's Portfolio</h1>
+  <p>Art below</p>
+</div>
 
-<body style="background-color:MediumPurple;">
+<body style="background-color:Purple;">
 
-<ul>
-  <li><a href="index.html">Portfolio</a></li>
-  <li><a href="glitch.html">Glitch</a></li>
-  <li><a href="meme-mashup.html">Meme mashup</a></li>
-  <li><a href="minecraft.html">Minecraft</a></li>
+<nav class="navbar navbar-expand-sm bg-light">
+ <div class="container-fluid">
+
+<ul class="navbar-nav">
+  <li class="nav-item"><a class="nav-link" href="index.html">Portfolio</a></li>
+  <li class="nav-item"><a class="nav-link" href="glitch.html">Glitch</a></li>
+  <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
+  <li class="navitem"><a class="nav-link" href="minecraft.html">Minecraft</a></li>
+  <li class="nav-item"><a class="nav-link" href="3d.html">3D Art</a></li>
+  <li class="nav-item"><a class="nav-link" href="net-art.html">Net Art</a></li>
 </ul>
+</nav>
 
+<div class="container-fluid">
 
-<h1>Isabells' Portfolio</h1>
+<p style="font-size:200%;" class="text-white"> GLITCH</p>
+<img src="images/car-1.png" class="rounded img-thumbnail img-fluid" alt="car 1">
 
-<img src="images/car-1.png" alt="car 1" height="300">   <li><a href="glitch.html">Glitch</a></li>
+<p style="font-size:200%;" class="text-white"> MINECRAFT</p>
+<img src="images/minecraft-game.png" class="rounded-circle img-thumbnail img-fluid" alt="minecraft game">
 
+<p style="font-size:200%;" class="text-white"> MEME</p>
+<img src="images/meme.png" class="rounded img-thumbnail img-fluid" alt="meme">
 
-<img src="images/minecraft-game.png" alt="minecraft game" height="300">   <li><a href="minecraft.html">Minecraft</a></li>
-
-
-<img src="images/meme.png" alt="meme" height="300">   <li><a href="meme-mashup.html">Meme mashup</a></li>
-
+<p style="font-size:200%;" class="text-white"> NET ART</p>
+<img src="C:\Users\garis\OneDrive\Documents\GitHub\IsabellG-art.github.io\net-art01.png" class="rounded img-fluid" alt="net art 01">
+</div>
 
 
 
