--- a/portfolio/minecraft.html
+++ b/portfolio/minecraft.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>Isabell Garcia</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
+</script>
 </head>
 <body>
+<div class="container p-5 my-5 bg-dark text-white">
+  <h1>Isabell's Portfolio</h1>
+  <p>Art below</p>
+</div>
+
 <body style="background-color:powderblue;">
 
-<ul>
-  <li><a href="index.html">Portfolio</a></li>
-  <li><a href="glitch.html">Glitch</a></li>
-  <li><a href="meme-mashup.html">Meme mashup</a></li>
-  <li><a href="minecraft.html">Minecraft</a></li>
+<nav class="navbar navbar-expand-sm bg-light">
+ <div class="container-fluid">
+
+<ul class="navbar-nav">
+  <li class="nav-item"><a class="nav-link" href="index.html">Portfolio</a></li>
+  <li class="nav-item"><a class="nav-link" href="glitch.html">Glitch</a></li>
+  <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
+  <li class="navitem"><a class="nav-link" href="minecraft.html">Minecraft</a></li>
+  <li class="nav-item"><a class="nav-link" href="3d.html">3D Art</a></li>
+  <li class="nav-item"><a class="nav-link" href="net-art.html">Net Art</a></li>
 </ul>
+</nav>
 
+<div class="container-fluid">
+<p class="h1">Minecraft Page</p>
 
-<h1 style="font-family:verdana;">Minecraft Page</h1>
+<p style="font-size:100%;">In minecraft I sculpted a cat from Fairy Tail, his name is Happy.</p>
 
-<p style="font-size:200%;"> Minecraft Art</p>
+<img src="images/minecraft-game.png" class="rounded-circle img-thumbnail img-fluid" alt="Minecreft game">
 
-<img src="images/minecraft-game.png" alt="Minecreft game">
-<img src="images/3d-model.jpg" alt="3D model" height="400">
-<p style="font-size:150%;">For those who don't know who this is, he is a cat named Happy from Fariytail.</p>
+</div>
