--- a/index.html
+++ b/index.html
@@ -1,48 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <title>Isabell Garcia</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
-</script>
+<title>Welcome Page</title>
 </head>
 <body>
-<div class="container p-5 my-5 bg-dark text-white">
-  <h1>Isabell's Portfolio</h1>
-  <p>Art below</p>
-</div>
 
-<body style="background-color:Purple;">
+<img src="choose.jpg" alt="choose" height="300">
 
-<nav class="navbar navbar-expand-sm bg-light">
- <div class="container-fluid">
+<h1>Choose who you are</h1>
 
-<ul class="navbar-nav">
-  <li class="nav-item"><a class="nav-link" href="index.html">Portfolio</a></li>
-  <li class="nav-item"><a class="nav-link" href="glitch.html">Glitch</a></li>
-  <li class="nav-item"><a class="nav-link" href="meme-mashup.html">Meme</a></li>
-  <li class="navitem"><a class="nav-link" href="minecraft.html">Minecraft</a></li>
-  <li class="nav-item"><a class="nav-link" href="3d.html">3D Art</a></li>
-  <li class="nav-item"><a class="nav-link" href="net-art.html">Net Art</a></li>
-</ul>
-</nav>
+<p>are you a person who likes to be alone and independent</p>
 
-<div class="container-fluid">
+<a href="yes.html">yes, i like to be alone</a>
 
-<p style="font-size:200%;" class="text-white"> GLITCH</p>
-<img src="images/car-1.png" class="rounded img-thumbnail img-fluid" alt="car 1">
+<p>or</p>
 
-<p style="font-size:200%;" class="text-white"> MINECRAFT</p>
-<img src="images/minecraft-game.png" class="rounded-circle img-thumbnail img-fluid" alt="minecraft game">
+<p>are you a person who likes to hang around energetic people</p>
 
-<p style="font-size:200%;" class="text-white"> MEME</p>
-<img src="images/meme.png" class="rounded img-thumbnail img-fluid" alt="meme">
+<a href="Hell yeah.html">hell yeah</a>
 
-<p style="font-size:200%;" class="text-white"> NET ART</p>
-<img src="C:\Users\garis\OneDrive\Documents\GitHub\IsabellG-art.github.io\net-art01.png" class="rounded img-fluid" alt="net art 01">
-</div>
+<p>or</p>
+
+<p>having trouble deciding choose this</p>
+
+<a href="i-don't-know.html">i don't know</a>
+
+</body>
+</html>
 
 
 
